# winapi-lab1

./: CMakeLists.txt  README.md  main.cpp
Controller/: abstract_controller.h  controller.cpp  controller.h  people_manager.cpp  people_manager.h
Model/: lecturer.cpp  lecturer.h  person.cpp  person.h  student.cpp  student.h  student_move_data.cpp  student_move_data.h
Model/Containers/: lecturer_container.cpp  lecturer_container.h  person_container.cpp  person_container.h  student_container.cpp  student_container.h
Model/Utils/: point.cpp  point.h
Model/Visitors/: cashier.cpp  cashier.h  person_visitor.h  visitable.h
View/: person_drawer.cpp  person_drawer.h  view.cpp  view.h
